package donatrack.model.contacto;

public enum TipoContacto {
    EMAIL,
    TELEFONO,
    WHATSAPP
}
