package donatrack.model.donacion;

public enum Unidades {
    KILOGRAMOS,
    UNIDADES,
    METROS,
    VOLUMEN,
}
